--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,6 @@
-<footer>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+<footer class="p-5 bg-dark text-white text-center">
+    <div class="container">
+        <p class="lead">Copyright &copy; 2022 Enaium</p>
+    </div>
 </footer>
+<script src="/js/bootstrap.bundle.min.js"></script>
