--- a/layouts/_default/post.html
+++ b/layouts/_default/post.html
@@ -1,22 +1,17 @@
 {{ define "main" }}
 <div class="container">
-    <div class="card">
-        <div class="card-header">
-            {{ .Title }}
-        </div>
-        <div class="card-body">
-            <div class="card-text">
-                {{ .Content }}
-            </div>
-            <div class="d-flex justify-content-between">
-                {{with .PrevInSection}}
-                <a class="text-reset" href="{{.Permalink}}">{{ .Title }}</a>
-                {{end}}
-                {{with .NextInSection}}
-                <a class="text-reset" href="{{.Permalink}}">{{ .Title }}</a>
-                {{end}}
-            </div>
-        </div>
+  <div class="card">
+    <div class="card-header">{{ .Title }}</div>
+    <div class="card-body">
+      <div class="card-text">{{ .Content }}</div>
+      <div class="d-flex justify-content-between">
+        {{with .PrevInSection}}
+        <a class="text-reset" href="{{.Permalink}}">{{ .Title }}</a>
+        {{end}} {{with .NextInSection}}
+        <a class="text-reset" href="{{.Permalink}}">{{ .Title }}</a>
+        {{end}}
+      </div>
     </div>
+  </div>
 </div>
 {{ end }}
