--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,14 +1,10 @@
 {{ define "main" }}
 <div class="container">
-    <div class="card">
-        <div class="card-header">
-            {{ .Title }}
-        </div>
-        <div class="card-body">
-            <div class="card-text">
-                {{ .Content }}
-            </div>
-        </div>
+  <div class="card">
+    <div class="card-header">{{ .Title }}</div>
+    <div class="card-body">
+      <div class="card-text">{{ .Content }}</div>
     </div>
+  </div>
 </div>
 {{ end }}
