--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,16 @@
 {{ define "main" }}
 <div class="container">
-    {{ with .Site.GetPage "/post" }}
-    <ul class="list-group">
-        {{ range .Pages }}
-        {{ $url := .Permalink }}
-        {{ $url = replace $url "#" "%23" }}
-        <li class="list-group-item">
-            <div class="d-flex justify-content-between text-muted">
-                <a href="{{ $url }}" class="fs-2 text-reset text-decoration-none">{{ .Title }}</a>
-                <span>{{ .Date | time.Format ":date_long" }}</span>
-            </div>
-        </li>
-        {{ end }}
-    </ul>
+  {{ with .Site.GetPage "/post" }}
+  <ul class="list-group">
+    {{ range .Pages }} {{ $url := .Permalink }} {{ $url = replace $url "#" "%23" }}
+    <li class="list-group-item">
+      <div class="d-flex justify-content-between text-muted">
+        <a href="{{ $url }}" class="fs-2 text-reset text-decoration-none">{{ .Title }}</a>
+        <span>{{ .Date | time.Format ":date_long" }}</span>
+      </div>
+    </li>
     {{ end }}
+  </ul>
+  {{ end }}
 </div>
 {{ end }}
