--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -26,7 +26,7 @@
             >{{ .Title }}</a
           >
         </li>
-        {{ end }} {{ end }} {{ end }} {{ if .Site.IsMultiLingual }}
+        {{ end }} {{ end }} {{ end }} {{ if hugo.IsMultilingual }}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
             <img alt="Logo" width="30" height="24" src="/assets/language.svg" />
